# julia-set-x86

./: .gitignore  CMakeLists.txt  README.md  func.asm  gen_Julia.asm  hed.mine  main.cpp
include/: Raw_Julia.cpp  Raw_Julia.h
src/: Raw_Julia.cpp  gen_Julia.asm  main.cpp
